k8s-examples/ingress-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-v1
  labels:
    app: nginx-v1
spec:
  containers:
    - name: nginx-v1
      image: nginx:1.15.9
 
---
 
apiVersion: v1
kind: Service
metadata:
  name: nginx-v1-service
spec:
  selector:
    app: nginx-v1
  ports:
    - port: 80
 
---
 
apiVersion: v1
kind: Pod
metadata:
  name: nginx-v2
  labels:
    app: nginx-v2
spec:
  containers:
    - name: nginx-v2
      image: nginx:1.15.12
 
---
 
apiVersion: v1
kind: Service
metadata:
  name: nginx-v2-service
spec:
  selector:
    app: nginx-v2
  ports:
    - port: 80
 
---
 
apiVersion: apps/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /v1(/|$)(.*)
          backend:
            serviceName: nginx-v1-service
            servicePort: 80
        - path: /v2(/|$)(.*)
          backend:
            serviceName: nginx-v2-service
            servicePort: 80
